@@ -18,6 +18,7 @@ import com.badlogic.gdx.utils.Array;
 import org.robovm.apple.coregraphics.CGRect;
 import org.robovm.apple.foundation.Foundation;
 import org.robovm.apple.foundation.NSObject;
+import org.robovm.apple.foundation.NSProcessInfo;
 import com.badlogic.gdx.backends.iosrobovm.bindings.metalangle.MGLKView;
 import com.badlogic.gdx.backends.iosrobovm.bindings.metalangle.MGLKViewController;
 import com.badlogic.gdx.backends.iosrobovm.bindings.metalangle.MGLKViewControllerDelegate;
@@ -30,6 +31,7 @@ import com.badlogic.gdx.backends.iosrobovm.bindings.metalangle.MGLContext;
 import com.badlogic.gdx.backends.iosrobovm.bindings.metalangle.MGLRenderingAPI;
 import org.robovm.apple.uikit.UIEdgeInsets;
 import org.robovm.apple.uikit.UIEvent;
+import org.robovm.apple.uikit.UIScreen;
 import org.robovm.objc.annotation.Method;
 import org.robovm.rt.bro.annotation.Pointer;
 
@@ -147,7 +149,17 @@ public class IOSGraphics extends AbstractGraphics {
 		viewController = app.createUIViewController(this);
 		viewController.setView(view);
 		viewController.setDelegate(viewDelegate);
-		viewController.setPreferredFramesPerSecond(config.preferredFramesPerSecond);
+		int preferredFps;
+		if (config.preferredFramesPerSecond == 0) {
+			if (NSProcessInfo.getSharedProcessInfo().getOperatingSystemVersion().getMajorVersion() >= 11) {
+				preferredFps = (int)(UIScreen.getMainScreen().getMaximumFramesPerSecond());
+			} else {
+				preferredFps = 60;
+			}
+		} else {
+			preferredFps = config.preferredFramesPerSecond;
+		}
+		viewController.setPreferredFramesPerSecond(preferredFps);
 		this.app = app;
 		this.input = input;
 		int r = 0, g = 0, b = 0, a = 0, depth = 0, stencil = 0, samples = 0;
@@ -392,7 +404,7 @@ public class IOSGraphics extends AbstractGraphics {
 
 	@Override
 	public DisplayMode getDisplayMode () {
-		return new IOSDisplayMode(getWidth(), getHeight(), config.preferredFramesPerSecond,
+		return new IOSDisplayMode(getWidth(), getHeight(), (int)(viewController.getPreferredFramesPerSecond()),
 			bufferFormat.r + bufferFormat.g + bufferFormat.b + bufferFormat.a);
 	}
 
@@ -487,7 +499,8 @@ public class IOSGraphics extends AbstractGraphics {
 	public void setVSync (boolean vsync) {
 	}
 
-	/** Sets the preferred framerate for the application. Default is 60. Is not generally advised to be used on mobile platforms.
+	/** Overwrites the preferred framerate for the application. Use {@link IOSApplicationConfiguration#preferredFramesPerSecond}
+	 * instead to set it at application startup.
 	 *
 	 * @param fps the preferred fps */
 	@Override
