@@ -47,8 +47,9 @@ public class IOSApplicationConfiguration {
 	/** the multisample format, None is default **/
 	public GLKViewDrawableMultisample multisample = GLKViewDrawableMultisample.None;
 
-	/** number of frames per second, 60 is default **/
-	public int preferredFramesPerSecond = 60;
+	/** preferred/max number of frames per second. Set to "0" to indicate max supported by screen (on standard OpenGL backend (non
+	 * MetalANGLE) Apple has a 60fps cap on most devices). **/
+	public int preferredFramesPerSecond = 0;
 
 	/** whether to use the accelerometer, default true **/
 	public boolean useAccelerometer = true;
