@@ -33,6 +33,7 @@ import com.badlogic.gdx.utils.Array;
 import org.robovm.apple.coregraphics.CGRect;
 import org.robovm.apple.foundation.Foundation;
 import org.robovm.apple.foundation.NSObject;
+import org.robovm.apple.foundation.NSProcessInfo;
 import org.robovm.apple.glkit.GLKView;
 import org.robovm.apple.glkit.GLKViewController;
 import org.robovm.apple.glkit.GLKViewControllerDelegate;
@@ -45,6 +46,7 @@ import org.robovm.apple.opengles.EAGLContext;
 import org.robovm.apple.opengles.EAGLRenderingAPI;
 import org.robovm.apple.uikit.UIEdgeInsets;
 import org.robovm.apple.uikit.UIEvent;
+import org.robovm.apple.uikit.UIScreen;
 import org.robovm.objc.annotation.Method;
 import org.robovm.rt.bro.annotation.Pointer;
 
@@ -141,7 +143,18 @@ public class IOSGraphics extends AbstractGraphics {
 		viewController = app.createUIViewController(this);
 		viewController.setView(view);
 		viewController.setDelegate(viewDelegate);
-		viewController.setPreferredFramesPerSecond(config.preferredFramesPerSecond);
+
+		int preferredFps;
+		if (config.preferredFramesPerSecond == 0) {
+			if (NSProcessInfo.getSharedProcessInfo().getOperatingSystemVersion().getMajorVersion() >= 11) {
+				preferredFps = (int)(UIScreen.getMainScreen().getMaximumFramesPerSecond());
+			} else {
+				preferredFps = 60;
+			}
+		} else {
+			preferredFps = config.preferredFramesPerSecond;
+		}
+		viewController.setPreferredFramesPerSecond(preferredFps);
 
 		this.app = app;
 		this.input = input;
@@ -400,7 +413,7 @@ public class IOSGraphics extends AbstractGraphics {
 
 	@Override
 	public DisplayMode getDisplayMode () {
-		return new IOSDisplayMode(getWidth(), getHeight(), config.preferredFramesPerSecond,
+		return new IOSDisplayMode(getWidth(), getHeight(), (int)(viewController.getPreferredFramesPerSecond()),
 			bufferFormat.r + bufferFormat.g + bufferFormat.b + bufferFormat.a);
 	}
 
@@ -496,7 +509,8 @@ public class IOSGraphics extends AbstractGraphics {
 	public void setVSync (boolean vsync) {
 	}
 
-	/** Sets the preferred framerate for the application. Default is 60. Is not generally advised to be used on mobile platforms.
+	/** Overwrites the preferred framerate for the application. Use {@link IOSApplicationConfiguration#preferredFramesPerSecond}
+	 * instead to set it at application startup.
 	 *
 	 * @param fps the preferred fps */
 	@Override
